# Skaal

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  skaal.toml
.github/: dependabot.yml  release.yml
.github/workflows/: auto-release.yml  ci.yml  docs.yml  infra-diff.yml  nonregression.yml  release-pr.yml  release.yml  tag-release.yml
catalog/: aws.toml
catalogs/: aws.toml  gcp.toml  local.toml
docs/: cli-configuration.md  cli.md  comparison.md  concepts.md  custom-backends.md  examples.md  faq.md  getting-started.md  how-it-works.md  http.md  index.md  multi-app-projects.md  platform-features.md  user_gaps.md  what_is_needed_for_prod.md  whats-new.md  when-to-use.md
docs/design/: 015-store-surface-implementation-plan.md  020-skaal-init-and-dev-implementation-plan.md  020-solver-diagnostics-implementation-plan.md  023-relational-migrations-implementation-plan.md  026-background-jobs-implementation-plan.md  027-backend-native-cursor-index-optimization-plan.md
docs/design_system/: ASSETS.md  README.md  index.md
docs/overrides/: main.html
docs/reference/: python-api-cli-parity.md  python-api-components.md  python-api-core.md  python-api-data.md  python-api-patterns.md  python-api-types.md  python-api.md
docs/tutorials/: files-and-streaming.md  first-app.md  gcp-deployment.md  http-api.md  index.md  planning-and-deployment.md  relational-and-migrations.md
examples/: blob_smoke.py  counter.py  counter_api.py  fastapi_streaming.py  file_upload_api.py  session_cache.py  team_directory.py  todo_api.py
examples/01_quickstart/: README.md  __init__.py  app.py
examples/02_storage_tour/: README.md  __init__.py  app.py
examples/02_todo_api/: app.py
examples/03_agents_and_jobs/: README.md  __init__.py  app.py
examples/03_dash_app/: app.py
examples/04_fullstack_split/: README.md  __init__.py  backend.py  frontend.py
examples/05_task_dashboard/: app.py
examples/06_fastapi_streaming/: app.py
examples/07_file_upload_api/: app.py
examples/bigquery_sales/: __init__.py  app.py  skaal.toml
examples/fastapi_streaming/: app.py
examples/file_upload_api/: app.py
examples/hello_world/: app.py
examples/mesh_counter/: app.py
examples/nonregression_kitchen_sink/: __init__.py  app.py
examples/todo_api/: __init__.py  app.py
mesh/: Cargo.toml  pyproject.toml
mesh/src/: lib.rs
notes/: nonregression-aws-policy.json  nonregression-credentials.md  redesign-status.md
notes/design/: 020-skaal-init-and-dev-implementation-plan.md  028-code-first-infra-redesign.md  028-multi-app-projects-implementation-plan.md  029-redesign-foundation-implementation-plan.md  030-inference-layer-implementation-plan.md  031-binding-layer-implementation-plan.md  032-runtime-deploy-on-bound-plan-implementation-plan.md  033-typing-contract-and-stubs-implementation-plan.md  035-docs-examples-and-v040-cut-implementation-plan.md  036-public-api-naming-critique.md  037-docs-redesign-plan.md  038-lambda-cold-start-backend-wiring.md  041-runtime-target-registry-and-facades.md  042-gcp-deploy-and-runtime-target.md
skaal/: __init__.py  _native.py  agent.py  api.py  app.py  blob.py  channel.py  components.py  decorators.py  errors.py  module.py  patterns.py  plan.py  plan_diff.py  plugins.py  project_lock.py  relational.py  resource_map.py  schedule.py  serialization.py  settings.py  storage.py  table.py  topic.py  traceability.py  vector.py
skaal/api/: __init__.py  _commands.py  _plan.py  _resource_map.py  _trace.py  _where.py
skaal/backends/: __init__.py  _base.py  _native_types.py  _registry.py  _spec.py  _tokens.py  apigw_lambda.py  apscheduler.py  asyncio.py  aws_secrets_manager.py  base.py  bigquery.py  bigquery_backend.py  chroma_backend.py  cloud_run.py  cloud_scheduler_run.py  cloud_tasks_run.py  dotenv.py  dynamodb.py  dynamodb_backend.py  eventbridge_lambda.py  filesystem_blob.py  firestore.py  firestore_backend.py  fsspec_blob_backend.py  gcp_secret_manager.py  gcs.py  in_process_channel.py  lambda_.py  local_backend.py  pgvector_backend.py  postgres.py  postgres_backend.py  pubsub.py  redis.py  redis_backend.py  redis_channel.py  s3.py  sqlite.py  sqlite_backend.py  (+4 more)
skaal/binding/: __init__.py  _probe.py  bind.py  defaults.py  environment.py  lock.py  model.py  registry.py
skaal/catalog/: loader.py  models.py  registry.py
skaal/cli/: _errors.py  _load.py  _logging.py  _orchestrator.py  _params.py  _pulumi.py  _utils.py  apps_cmd.py  build_cmd.py  catalog_cmd.py  config.py  deploy_cmd.py  destroy_cmd.py  diff_cmd.py  doctor_cmd.py  infra_cmd.py  init_cmd.py  main.py  map_cmd.py  plan_cmd.py  run_cmd.py  stacks_cmd.py  stubs_cmd.py  trace_cmd.py  where_cmd.py
skaal/deploy/: __init__.py  _backends.py  _base_target.py  _naming.py  _protocol.py  _registry.py  _render.py  aws.py  aws_lambda.py  build.py  config.py  docker_compose.py  gcp.py  gcp_cloudrun.py  models.py  program.py  push.py  registry.py  runtime_assets.py  secrets.py  tags.py  target.py
skaal/inference/: __init__.py  asgi.py  fingerprint.py  model.py  runtime_meta.py  walk.py
skaal/local/: runtime.py  storage.py
skaal/mesh/: __init__.py
skaal/migrate/: engine.py  relational.py  shadow.py
skaal/runtime/: __init__.py  _core.py  _local_scheduler.py  _local_server.py  _planning.py  _registry.py  agent_registry.py  auth.py  base.py  channels.py  dispatch.py  jobs.py  local.py  mesh_runtime.py  middleware.py  models.py  telemetry.py
skaal/secrets/: __init__.py  aws.py  gcp.py
skaal/solver/: _pattern_solvers.py  components.py  compute.py  diagnostics.py  explain.py  graph.py  plan.py  solver.py  stability.py  storage.py  targets.py
skaal/stubs/: __init__.py  emit.py  (+1 more)
skim/: __init__.py  app.py  components.py  decorators.py  module.py  patterns.py  plan.py  types.py
skim-mesh/: Cargo.toml
tests/: conftest.py  test_api.py  test_module_exports.py  test_native_helper.py  test_project_lock.py  test_relational_primitive.py  test_schedule.py
(+362 files in other folders)
