[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skaal"
version = "0.4.0a0"
description = "A Python framework where the application code is the infrastructure declaration."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["infrastructure", "python", "cloud", "deployment", "pulumi", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pydantic>=2.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "greenlet>=3.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "redis>=5.0",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "tenacity>=9.1.4",
    "pybreaker>=1.4.1",
    "fsspec>=2025.3.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/Elouen-ginat/Skaal"
Repository = "https://github.com/Elouen-ginat/Skaal"
Issues = "https://github.com/Elouen-ginat/Skaal/issues"

[project.optional-dependencies]
serve = [
    "uvicorn>=0.29",
    "starlette>=0.34",
    "watchfiles>=0.22",
]
runtime = [
    "apscheduler>=3.10",
    "PyJWT[crypto]>=2.9",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "rq>=2.8",
    "fakeredis>=2.23",
]
deploy = [
    "docker>=7.1",
    "pulumi>=3.0",
    "pulumi-docker>=4.9",
]
aws = [
    "boto3>=1.34",
    "s3fs>=2025.3.0",
    "pulumi-aws>=6.0",
    "asyncpg>=0.29",
]
gcp = [
    "google-auth>=2.32",
    "google-cloud-firestore>=2.16",
    "google-cloud-storage>=2.16",
    "gcsfs>=2025.3.0",
    "asyncpg>=0.29",
    "cloud-sql-python-connector[asyncpg]>=1.9",
    "pulumi-gcp>=7.0",
]
fastapi = [
    "fastapi",
    "python-multipart>=0.0.5",
]
dash = [
    "dash",
    "dash-bootstrap-components>=1.0",
]
examples = [
    "dash",
    "fastapi",
    "dash-bootstrap-components>=1.0",
    "python-multipart>=0.0.5",
]
secrets-aws = [
    "aioboto3>=12.0",
]
secrets-gcp = [
    "google-cloud-secret-manager>=2.18",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.7",
    "mkdocstrings[python]>=0.30",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "rq>=2.8",
    "fakeredis>=2.23",
    "fastapi",
    "python-multipart>=0.0.5",
]
lint = [
    "ruff>=0.8.6",
    "pre-commit>=3.6",
    "bandit[toml]>=1.8.0",
]
typecheck = [
    "mypy>=1.13",
    "types-redis>=4.6",
]
audit = [
    "pip-audit>=2.7",
]
build = [
    "hatchling",
    "build>=1.0",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "typecheck" },
    { include-group = "build" },
    { include-group = "audit" },
]

[project.scripts]
skaal = "skaal.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["skaal"]
artifacts = [
    "skaal/deploy/templates/**",
    "skaal/cli/templates/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["skaal/deploy/templates", "artifacts", "site"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "B", "UP", "SIM", "C4", "RUF",
    "ASYNC", "PTH", "PIE", "PERF", "TID",
]
ignore = [
    "E501",
    "B008",
    "SIM108",
    "PERF203",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM", "PERF", "PTH"]
"examples/**" = ["B", "SIM", "PERF", "PTH", "UP"]
"skaal/cli/templates/**" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["skaal"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = "(^tests/|^examples/|^skaal/deploy/templates/|^artifacts/|^site/)"

[[tool.mypy.overrides]]
module = ["skaal.types.*"]
disallow_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
xfail_strict = true
markers = [
    "slow: tests that take more than a few seconds",
    "integration: tests that hit external services or real backends",
    "aws: tests that require AWS credentials",
    "gcp: tests that require GCP credentials",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:google.*",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
branch = true
source = ["skaal"]
omit = [
    "skaal/deploy/templates/*",
    "skaal/cli/templates/*",
    "*/__main__.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
# ADR 029 Phase 1 temporarily relaxes the floor while large surfaces are
# deleted; Phase 5 restores it to 60.
fail_under = 40
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "skaal/deploy/templates", "examples"]
skips = ["B101"]

# ── Skaal project defaults ────────────────────────────────────────────────────
# All fields are optional. CLI flags and SKAAL_* env vars take precedence.

[tool.skaal.build.modules."examples.07_file_upload_api.app"]
dependencies = ["python-multipart>=0.0.5"]

[tool.skaal.build.targets.local]
dependencies = ["skaal[serve,runtime]", "gunicorn>=22.0"]

[tool.skaal.build.targets.gcp]
dependencies = ["skaal[serve,runtime,gcp]"]

[tool.skaal.build.targets.gcp.variants.wsgi]
dependencies = ["gunicorn>=22.0"]

[tool.skaal.build.targets.aws]
dependencies = ["skaal[runtime,aws]"]

[tool.skaal.build.targets.aws.variants.wsgi]
dependencies = ["mangum>=0.17"]
